--- a/Rasa_Chatbot/domain.yml
+++ b/Rasa_Chatbot/domain.yml
@@ -29,6 +29,9 @@ responses:
   utter_iamabot:
   - text: "I am a bot, powered by Rasa."
 
+  utter_paly_classes:
+  - text: "Paly offers these classes: Math, Science, History, English."
+
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
