--- a/data/rules.yml
+++ b/data/rules.yml
@@ -16,8 +16,29 @@ rules:
   steps:
   - intent: paly_courses
   - action: utter_paly_courses
+  - action: utter_did_that_help
 
 - rule: Say location of department
   steps:
   - intent: paly_location
   - action: utter_paly_locate
+  - action: utter_did_that_help
+
+- rule: Give information on clubs
+  steps:
+  - intent: paly_clubs
+  - action: utter_paly_clubs
+  - action: utter_did_that_help
+
+- rule: Give information on tutoring
+  steps:
+  - intent: paly_tutoring
+  - action: utter_paly_tutoring
+  - action: utter_did_that_help
+
+- rule: Give information on sports
+  steps:
+  - intent: paly_sports
+  - action: utter_paly_sports
+  - action: utter_did_that_help
+
