update intents and utterances

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -128,5 +128,5 @@ nlu:
   examples: |
     - How can I join a sports team?
     - What athletic teams does paly have?
-    - When are tryouts for [some sport]?
+    - When are tryouts for soccer?
     - What sports does paly offer?
