--- a/data/stories.yml
+++ b/data/stories.yml
@@ -8,6 +8,18 @@ stories:
   - action: utter_greet
   - intent: mood_great
   - action: utter_happy
+  - intent: affirm
+  - action: utter_goodbye
+
+- story: happy path
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: mood_great
+  - action: utter_happy
+  - intent: deny
+  - action: utter_cheer_up
+
 
 - story: sad path 1
   steps:
@@ -25,6 +37,106 @@ stories:
   - action: utter_greet
   - intent: mood_unhappy
   - action: utter_cheer_up
+  - action: utter_did_that_help
+  - intent: deny
+  - action: utter_goodbye
+
+- story: courses path 1
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: paly_courses
+  - action: utter_paly_courses
+  - action: utter_did_that_help
+  - intent: affirm
+  - action: utter_happy
+
+- story: courses path 2
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: paly_courses
+  - action: utter_paly_courses
+  - action: utter_did_that_help
+  - intent: deny
+  - action: utter_goodbye
+
+- story: locate path 1
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: paly_locate
+  - action: utter_paly_locate
+  - action: utter_did_that_help
+  - intent: affirm
+  - action: utter_happy
+
+- story: locate path 2
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: paly_locate
+  - action: utter_paly_locate
+  - action: utter_did_that_help
+  - intent: deny
+  - action: utter_goodbye
+
+- story: clubs path 1
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: paly_clubs
+  - action: utter_paly_clubs
+  - action: utter_did_that_help
+  - intent: affirm
+  - action: utter_happy
+
+- story: clubs path 2
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: paly_clubs
+  - action: utter_paly_clubs
+  - action: utter_did_that_help
+  - intent: deny
+  - action: utter_goodbye
+
+- story: tutoring path 1
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: paly_tutoring
+  - action: utter_paly_tutoring
+  - action: utter_did_that_help
+  - intent: affirm
+  - action: utter_happy
+
+- story: tutoring path 2
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: paly_tutoring
+  - action: utter_paly_tutoring
+  - action: utter_did_that_help
+  - intent: deny
+  - action: utter_goodbye
+
+- story: sports path 1
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: paly_sports
+  - action: utter_paly_sports
+  - action: utter_did_that_help
+  - intent: affirm
+  - action: utter_happy
+
+- story: sports path 2
+  steps:
+  - intent: greet
+  - action: utter_greet
+  - intent: paly_sports
+  - action: utter_paly_sports
   - action: utter_did_that_help
   - intent: deny
   - action: utter_goodbye
