--- a/data/stories.yml
+++ b/data/stories.yml
@@ -2,7 +2,7 @@ version: "3.1"
 
 stories:
 
-- story: happy path
+- story: happy path 1
   steps:
   - intent: greet
   - action: utter_greet
@@ -11,7 +11,7 @@ stories:
   - intent: affirm
   - action: utter_goodbye
 
-- story: happy path
+- story: happy path 2
   steps:
   - intent: greet
   - action: utter_greet
